--- a/NavyFoodApp/composer.json
+++ b/NavyFoodApp/composer.json
@@ -9,13 +9,17 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
+        "calcinai/php-imagick": "^0.1.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "khanamiryan/qrcode-detector-decoder": "1.0.5.1",
         "laravel/framework": "^8.40",
         "laravel/jetstream": "^2.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
+        "libern/qr-code-reader": "^1.0",
         "livewire/livewire": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2"
     },
