test plan updated

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ yarn-error.log
 /.vscode
 NavyFoodApp/.idea/workspace.xml
 Documentation/Information/~$stPlan.docx
+Documentation/Information/~$quirements Document.docx
