edit git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ NFA/NFA/NFA.Android/obj/Debug/90/designtime/Resource.designer.cs
 NFA/NFA/NFA.Android/obj/NFA.Android.csproj.nuget.dgspec.json
 NFA/NFA/NFA.Android/obj/NFA.Android.csproj.nuget.dgspec.json
 NFA/NFA/NFA.Android/obj/project.assets.json
+NFA/.vs/NFA/v16/.suo
+NFA/NFA/NFA.Android/obj/Debug/90/libraryprojectimports.cache
+*.cache
